tests/ui/const-generics/type_mismatch.stderr
error: the constant `N` is not of type `usize`
  --> $DIR/type_mismatch.rs:5:26
   |
LL | fn bar<const N: u8>() -> [u8; N] {}
   |                          ^^^^^^^ expected `usize`, found `u8`

error: aborting due to previous error

